# MEDB

./: .gitignore  BGS-Minerals-extractor.ipynb  BGS_Lithium_Full_Audit.xlsx  Bauxite.py  LICENSE.txt  MIT.md  Minerals.ipynb  Minerals_main.py  README.md  Testing notes.xlsx  World_Mineral_Archive_Manager.ipynb  backup_test.py  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
Source Files (DO NOT MODIFY)/: statisticsExport(1).xlsx  statisticsExport(2).xlsx  statisticsExport(3).xlsx  statisticsExport(4).xlsx  statisticsExport(5).xlsx  statisticsExport.xlsx
docs/: api_reference.rst  architecture.rst  conf.py  data_model.rst  index.rst  installation.rst  licensing.rst  requirements.txt  troubleshooting.rst
docs/_build/html/: .buildinfo  api_reference.html  architecture.html  cli.html  data_model.html  genindex.html  index.html  ingestion.html  installation.html  licensing.html  objects.inv  py-modindex.html  reporting.html  search.html  searchindex.js  troubleshooting.html
docs/_build/html/.doctrees/: api_reference.doctree  architecture.doctree  cli.doctree  (+9 more)
files/: 1.xlsx  2.xlsx  3.xlsx  4.xlsx  statisticsExport (1).xlsx  statisticsExport(1).xlsx  statisticsExport(2).xlsx  statisticsExport(3).xlsx  statisticsExport(4).xlsx  statisticsExport(5).xlsx  statisticsExport(6).xlsx  statisticsExport(7).xlsx  statisticsExport(8).xlsx
notebooks/: BGS-Minerals-extractor.ipynb  World_Mineral_Archive_Manager.ipynb
output/: final.xlsx
scripts/: bgs_build_archive.py
src/bgs/: __init__.py  client.py  config.py  db.py  extract.py  queries.py  reporting.py
(+10 files in other folders)
